--- a/seoulgood---delivery/package.json
+++ b/seoulgood---delivery/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "seoulgood---delivery",
+  "name": "seoulgood-delivery",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,18 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "@google/genai": "^1.33.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "@google/genai": "^0.1.0",
     "xlsx": "^0.18.5",
-    "lucide-react": "^0.560.0",
-    "react-leaflet": "^5.0.0",
+    "lucide-react": "^0.378.0",
+    "react-leaflet": "^4.2.1",
     "leaflet": "^1.9.4"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/leaflet": "^1.9.12",
+    "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.4"
   }
 }
