--- a/seoulgood---delivery/package.json
+++ b/seoulgood---delivery/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/leaflet": "^1.9.12",
+    "@types/node": "^20.14.9",
     "@vitejs/plugin-react": "^4.3.1",
     "typescript": "^5.5.3",
     "vite": "^5.3.4"
